name:                kucipong
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/kucipong#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kucipong
                     , Kucipong.Config
                     , Kucipong.Db
                     , Kucipong.Db.Models
                     , Kucipong.Db.Models.Base
                     , Kucipong.Db.Models.EntityDefs
                     , Kucipong.Db.Pool
                     , Kucipong.Db.Run
                     , Kucipong.Environment
                     , Kucipong.Errors
                     , Kucipong.Handler
                     , Kucipong.Monad
                     , Kucipong.Monad.Db
                     , Kucipong.Monad.Db.Class
                     , Kucipong.Monad.Db.Instance
                     , Kucipong.Monad.Db.Trans
                     , Kucipong.Orphans
                     , Kucipong.Prelude
                     , Kucipong.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , classy-prelude
                     , email-validate
                     , envelope
                     , http-api-data
                     , http-client
                     , http-conduit
                     , lens
                     , monad-control
                     , monad-logger
                     , mtl
                     , path-pieces
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , postgresql-simple
                     , pwstore-fast
                     , read-env-var
                     , resource-pool
                     , Spock
                     , time
                     , transformers
                     , transformers-base
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

executable kucipong
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kucipong
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

test-suite kucipong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kucipong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blueimpact/kucipong
