name:                kucipong
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/kucipong#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Kucipong
                     , Kucipong.Aws
                     , Kucipong.Config
                     , Kucipong.Db
                     , Kucipong.Db.Models
                     , Kucipong.Db.Models.Base
                     , Kucipong.Db.Models.EntityDefs
                     , Kucipong.Db.Pool
                     , Kucipong.Db.Run
                     , Kucipong.Dev
                     , Kucipong.Email
                     , Kucipong.Environment
                     , Kucipong.Errors
                     , Kucipong.Form
                     , Kucipong.Handler
                     , Kucipong.Handler.Admin
                     , Kucipong.Handler.Admin.Types
                     , Kucipong.Handler.Store
                     , Kucipong.Handler.Store.Coupon
                     , Kucipong.Handler.Store.Route
                     , Kucipong.Handler.Store.Types
                     , Kucipong.Handler.Static
                     , Kucipong.Handler.Static.TH
                     , Kucipong.Host
                     , Kucipong.I18n
                     , Kucipong.I18n.Class
                     , Kucipong.I18n.Instance
                     , Kucipong.I18n.Types
                     , Kucipong.LoginToken
                     , Kucipong.Monad
                     , Kucipong.Monad.Cookie
                     , Kucipong.Monad.Cookie.Class
                     , Kucipong.Monad.Cookie.Instance
                     , Kucipong.Monad.Cookie.Trans
                     , Kucipong.Monad.Db
                     , Kucipong.Monad.Db.Class
                     , Kucipong.Monad.Db.Instance
                     , Kucipong.Monad.Db.Trans
                     , Kucipong.Monad.OtherInstances
                     , Kucipong.Monad.SendEmail
                     , Kucipong.Monad.SendEmail.Class
                     , Kucipong.Monad.SendEmail.Instance
                     , Kucipong.Monad.SendEmail.Trans
                     , Kucipong.Orphans
                     , Kucipong.Persist
                     , Kucipong.Prelude
                     , Kucipong.RenderTemplate
                     , Kucipong.Session
                     , Kucipong.Spock
                     , Kucipong.Spock.ReqParam
                     , Kucipong.Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amazonka
                     , amazonka-s3
                     , base64-bytestring
                     , blaze-markup
                     , classy-prelude
                     , clientsession
                     , data-default
                     , emailaddress
                     , envelope
                     , from-sum
                     , filepath
                     , Glob
                     , hailgun
                     , HTTP
                     , heterocephalus
                     , http-api-data
                     , http-client
                     , http-conduit
                     , http-types
                     , hvect
                     , lens
                     , monad-control
                     , monad-logger
                     , MonadRandom
                     , monad-time
                     , mtl
                     , path-pieces
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , postgresql-simple
                     , pretty-simple
                     , pwstore-fast
                     , read-env-var
                     , reroute
                     , resource-pool
                     , resourcet
                     , shakespeare
                     , Spock
                     , Spock-core
                     , template-haskell
                     , th-lift-instances
                     , time
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

executable kucipong
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kucipong
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

executable kucipong-add-admin
  hs-source-dirs:      app
  main-is:             AddAdmin.hs
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , kucipong
                     , emailaddress
                     , from-sum
                     , lens
                     , monad-time
                     , optparse-applicative
                     , persistent
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , EmptyDataDecls
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , PolyKinds
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
  other-extensions:    QuasiQuotes
                     , TemplateHaskell

test-suite kucipong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kucipong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite kucipong-doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , classy-prelude
                     , doctest
                     , Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/blueimpact/kucipong
